Fixed bug #38067 (Parameters are not decoded from utf-8 when using encoding option)